--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,187 @@
+div, p, h1, h2, h3, h4, img, a, span {
+  border: solid 1px red;
+}
+
 .page {
+  box-sizing: border-box;
+
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
-/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
+.reset {
+  margin: 0 auto;
+  padding: 0;
+}
+
+/* =========
+logo */
+
+.logo {
+
+}
+
+.logo_place_header {
+  background-image: url(/images/logo_place_header.svg);
+
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 1;
+
+  height: 32px;
+  width: 183px;
+}
+
+
+/* =========
+header */
+
+/* ToDo:
+1. Убрать отступы
+2. Тег <img> или <div>
+3. Заголовок <h1>
+*/
+
+.header {
+  display: flex;
+  align-items: center;
+
+  position: relative;
+  z-index: -2;
+
+  background-color: #f2f2f2;
+
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+}
+
+.header__title {
+  z-index: 1;
+
+  margin: 0 0 0 64px;
+  width: 730px;
+
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600; /* Semi Bold */
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  z-index: 1;
+
+  margin: 0;
+  width: 388px;
+
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+}
+
+.header__link {
+  color:  #2f80ed;
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  height: 608px;
+  width: 765px;
+
+  background-size: contain;
+}
+
+.header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: -1;
+
+  background-color: #2f80ed;
+
+  height: 568px;
+  width: 568px;
+}
+
+/* =========
+description */
+
+.description {
+  display: flex;
+  justify-content: center;
+}
+
+/* =========
+two-columns */
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+
+  margin: 100px 0;
+  width: 80%;
+}
+
+.two-columns__brief {
+  color:  #2f80ed;
+
+  width: 175px;
+  margin: 0;
+
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+.two-columns__main-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
+
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+}
+
+/* =========
+digits */
+
+/* =========
+feynman */
+
+/* =========
+kaufman */
+
+/* =========
+footer */
