--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,32 @@
-div, p, h1, h2, h3, h4, img, a, span {
+div, p, h1, h2, h3, h4, img, a, span, ul, li, section {
   border: solid 1px red;
 }
 
 .page {
-  box-sizing: border-box;
-
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
-.reset {
-  margin: 0 auto;
-  padding: 0;
-}
-
 /* =========
 logo */
 
 .logo {
-
-}
-
-.logo_place_header {
-  background-image: url(/images/logo_place_header.svg);
-
-  position: absolute;
-  top: 30px;
-  left: 64px;
-  z-index: 1;
-
   height: 32px;
   width: 183px;
 }
 
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 1;
+}
+
+.logo_place_footer {
+  height: 35px;
+}
 
 /* =========
 header */
@@ -50,6 +35,7 @@ header */
 1. Убрать отступы
 2. Тег <img> или <div>
 3. Заголовок <h1>
+4. Для <img> width: 100%
 */
 
 .header {
@@ -134,7 +120,7 @@ two-columns */
   display: flex;
   justify-content: space-between;
 
-  margin: 100px 0;
+  margin: 100px 0 0 0;
   width: 80%;
 }
 
@@ -175,13 +161,260 @@ two-columns */
 }
 
 /* =========
+section-... */
+
+.section-title {
+  margin: 0;
+
+  text-align: center;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+
+  width: 60%;
+}
+
+.section-title_theme_dark {
+  color: #fff;
+}
+
+.section-subtitle {
+  margin: 20px 0 0 0;
+
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+
+  width: 60%;
+}
+
+.section-subtitle_theme_dark {
+  color: #fff;
+}
+
+/* =========
 digits */
+
+.digits {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  padding: 100px 0;
+}
+
+/* =========
+table */
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  z-index: 2;
+
+  padding: 0;
+  margin: 0;
+  width: 1100px;
+}
+
+.table__cell {
+  list-style: none;
+
+  margin-top: 60px;
+
+  width: 250px;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-top: 80px;
+}
+
+.table__heading {
+  margin: 0;
+
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.table__text {
+  margin: 20px 0 0 0;
+
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+}
 
 /* =========
 feynman */
 
+.feynman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: relative;
+
+  background-color: #f2f2f2;
+
+  min-height: 890px;
+}
+
+.feynman__title {
+  width: 648px;
+  z-index: 1;
+
+  margin: 100px 0 0 0;
+
+  text-align: center;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  margin: 70px 0 0 0;
+
+  z-index: 1;
+
+  text-align: center;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: 400;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  z-index: 1;
+
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: 400;
+
+  color:  #2f80ed;
+  text-decoration: none;
+}
+
+.feynman__img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  height: 637px;
+  width: 867px;
+}
+
 /* =========
 kaufman */
 
+.kaufman {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  overflow: hidden;
+
+  padding: 90px 0;
+
+  position: relative;
+
+  background-color: #1f1f1f;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+
+  height: 877px;
+  width: 877px;
+
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
+
 /* =========
 footer */
+
+.footer {
+  background-color: #1f1f1f;
+  color: #fff;
+
+  /* box-sizing: border-box используется для сохранения значения минимальной высоты */
+  box-sizing: border-box;
+  padding-top: 60px;
+  padding-bottom: 40px;
+
+  display: flex;
+  justify-content: center;
+  min-height: 350px;
+}
+
+.footer__author {
+  margin: 18px 0;
+
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 600;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
+
+.footer__column-link {
+  display: flex;
+  align-items: center;
+
+  text-decoration: none;
+  color: #fff;
+
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.footer__social-icon {
+  margin-right: 10px;
+  height: 16px;
+  width: 16px;
+}
