--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-div, p, h1, h2, h3, h4, img, a, span, ul, li, section {
+* {
   border: solid 1px red;
 }
 
@@ -15,35 +15,32 @@ logo */
 .logo {
   height: 32px;
   width: 183px;
+
+  z-index: 9;
 }
 
 .logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 1;
 }
 
 .logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+
   height: 35px;
 }
 
 /* =========
 header */
 
-/* ToDo:
-1. Убрать отступы
-2. Тег <img> или <div>
-3. Заголовок <h1>
-4. Для <img> width: 100%
-*/
-
 .header {
   display: flex;
   align-items: center;
 
   position: relative;
-  z-index: -2;
 
   background-color: #f2f2f2;
 
@@ -53,7 +50,7 @@ header */
 }
 
 .header__title {
-  z-index: 1;
+  z-index: 9;
 
   margin: 0 0 0 64px;
   width: 730px;
@@ -67,7 +64,7 @@ header */
   position: absolute;
   left: 64px;
   bottom: 30px;
-  z-index: 1;
+  z-index: 9;
 
   margin: 0;
   width: 388px;
@@ -86,6 +83,7 @@ header */
   position: absolute;
   right: 0;
   bottom: 0;
+  z-index: 1;
 
   height: 608px;
   width: 765px;
@@ -97,7 +95,6 @@ header */
   position: absolute;
   top: 64px;
   right: 0;
-  z-index: -1;
 
   background-color: #2f80ed;
 
@@ -111,6 +108,8 @@ description */
 .description {
   display: flex;
   justify-content: center;
+
+  padding-top: 100px;
 }
 
 /* =========
@@ -120,7 +119,6 @@ two-columns */
   display: flex;
   justify-content: space-between;
 
-  margin: 100px 0 0 0;
   width: 80%;
 }
 
@@ -145,7 +143,7 @@ two-columns */
 }
 
 .two-columns__paragraph {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
 
   font-size: 24px;
   line-height: 34px;
@@ -212,7 +210,7 @@ table */
   flex-wrap: wrap;
   justify-content: space-between;
 
-  z-index: 2;
+  z-index: 9;
 
   padding: 0;
   margin: 0;
@@ -266,7 +264,7 @@ feynman */
 
 .feynman__title {
   width: 648px;
-  z-index: 1;
+  z-index: 9;
 
   margin: 100px 0 0 0;
 
@@ -277,9 +275,9 @@ feynman */
 }
 
 .feynman__subtitle {
-  margin: 70px 0 0 0;
+  z-index: 9;
 
-  z-index: 1;
+  margin: 70px 0 0 0;
 
   text-align: center;
   font-size: 36px;
@@ -291,7 +289,7 @@ feynman */
   position: absolute;
   top: 50%;
   right: 48px;
-  z-index: 1;
+  z-index: 9;
 
   font-size: 36px;
   line-height: 51px;
@@ -346,14 +344,13 @@ footer */
   background-color: #1f1f1f;
   color: #fff;
 
-  /* box-sizing: border-box используется для сохранения значения минимальной высоты */
+  min-height: 350px;
   box-sizing: border-box;
   padding-top: 60px;
   padding-bottom: 40px;
 
   display: flex;
   justify-content: center;
-  min-height: 350px;
 }
 
 .footer__author {
@@ -367,6 +364,7 @@ footer */
 .footer__columns {
   display: flex;
   justify-content: space-between;
+
   width: 90%;
 }
 
