--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+* {
+  border: solid 1px red;
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -9,7 +13,6 @@
 logo */
 
 .logo {
-  height: 32px;
   width: 183px;
 
   z-index: 9;
@@ -17,6 +20,8 @@ logo */
 
 .logo_place_header {
   background-image: url(../images/logo_place_header.svg);
+
+  height: 32px;
 
   position: absolute;
   top: 30px;
@@ -53,7 +58,7 @@ header */
 
   font-size: 102px;
   line-height: 96px;
-  font-weight: 600; /* Semi Bold */
+  font-weight: 700;
 }
 
 .header__subtitle {
@@ -151,7 +156,7 @@ two-columns */
 }
 
 .two-columns__span-accent {
-  font-weight: 600;
+  font-weight: 700;
 }
 
 /* =========
@@ -163,9 +168,11 @@ section-... */
   text-align: center;
   font-size: 60px;
   line-height: 1.15;
-  font-weight: 600;
+  font-weight: 700;
 
   width: 60%;
+
+  z-index: 9;
 }
 
 .section-title_theme_dark {
@@ -181,6 +188,8 @@ section-... */
   font-weight: 400;
 
   width: 60%;
+
+  z-index: 9;
 }
 
 .section-subtitle_theme_dark {
@@ -232,7 +241,7 @@ table */
 
   font-size: 24px;
   line-height: 1.15;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .table__text {
@@ -255,19 +264,20 @@ feynman */
 
   background-color: #f2f2f2;
 
-  min-height: 890px;
+  min-height: 790px;
+  padding-top: 100px;
 }
 
 .feynman__title {
   width: 648px;
   z-index: 9;
 
-  margin: 100px 0 0 0;
+  margin: 0;
 
   text-align: center;
   font-size: 120px;
   line-height: 1.15;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .feynman__subtitle {
@@ -384,7 +394,9 @@ footer */
 .footer__column-heading {
   font-size: 18px;
   line-height: 30px;
-  font-weight: 600;
+  font-weight: 700;
+
+  margin: 0;
 }
 
 .footer__column-links {
