--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-* {
-  border: solid 1px red;
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -403,11 +399,15 @@ footer */
   display: flex;
   flex-direction: column;
 
-  margin-top: 20px;
-  margin-bottom: 16px;
+  margin: 20px 0 16px;
+  padding: 0;
 }
 
 .footer__column-link {
+  list-style: none;
+}
+
+.footer__link {
   display: flex;
   align-items: center;
 
