--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
 
-  margin-top: 80px;
+  margin: 80px 0 0 0;
   padding-left: 0;
   width: 1100px;
 }
