--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,7 @@
 .video__iframes {
+  display: flex;
+  justify-content: space-between;
   position: relative;
   top: 50px;
   z-index: 1;
-
-  font-size: 0; /* Убирает непонятные отступы между фреймами. */
 }
